# lab2_OS

./: CMakeLists.txt  README_RU.md  README_RU.mdZone.Identifier  README_VI.md  README_VI.mdZone.Identifier  benchmark.c  cache.c  direct_io.c  ema_replace_int_vtpc.c  test_vtpc.c  vtpc.c  vtpc.h  vtpc_internal.h
